--- a/src/pug/pages/colors-and-type/colors-and-type.pug
+++ b/src/pug/pages/colors-and-type/colors-and-type.pug
@@ -17,13 +17,13 @@ block content
                 +color-item('Green', '#6FCF97')(class="color-item__shape-secondary")
             .items-wrapper__headers
                     h1.header-item__header H1
-                    .header-item__text.title.title__h1 This one is the sub-section or widget title
+                    h1.header-item__text.title This one is the sub-section or widget title
     
                     h2.header-item__header H2
-                    .header-item__text.title.title__h2 Next one is the item title inside widgets
+                    h2.header-item__text.title Next one is the item title inside widgets
     
                     h3.header-item__header H3
-                    .header-item__text.title.title__h3 This is a label or CTA text
+                    h3.header-item__text.title This is a label or CTA text
     
                     .body-text.header-item__header Body
                     .body-text.header-item__text This is the body text which is used for most of the design, like paragraphs, lists, etc.
