--- a/src/pug/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pug/pages/headers-and-footers/headers-and-footers.pug
@@ -5,5 +5,7 @@ block variables
     - var description = 'Headers & Footers';
 
 block content
-    
+    .content-wrapper
+        +header()
+        +header('Юлий Цезарь')
 block script
