--- a/src/assets/scss/abstracts/vars.scss
+++ b/src/assets/scss/abstracts/vars.scss
@@ -18,6 +18,9 @@ $dark-100                : rgba(31, 32, 65, 1);
 $dark-75                 : rgba(31, 32, 65, 0.75);
 $dark-50                 : rgba(31, 32, 65, 0.50);
 $dark-25                 : rgba(31, 32, 65, 0.25);
+$dark-10                 : rgba(31, 32, 65, 0.10);
 $dark-5                  : rgba(31, 32, 65, 0.05);
 $primary                 : #BC9CFF;
 $secondary               : #6FCF97;
+
+$gradient                : linear-gradient(180deg, $primary 0%, #8BA4F9 100%);
