--- a/src/assets/scss/base/fonts.scss
+++ b/src/assets/scss/base/fonts.scss
@@ -3,22 +3,15 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
-  src: url('../../fonts/montserrat-v15-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../../fonts/montserrat-v15-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../../fonts/montserrat-v15-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
-       url('../../fonts/montserrat-v15-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../../fonts/montserrat-v15-latin_cyrillic-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
-}
-/* montserrat-600 - latin_cyrillic */
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../../fonts/montserrat-v15-latin_cyrillic-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../../fonts/montserrat-v15-latin_cyrillic-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../../fonts/montserrat-v15-latin_cyrillic-600.woff') format('woff'), /* Modern Browsers */
-       url('../../fonts/montserrat-v15-latin_cyrillic-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../../fonts/montserrat-v15-latin_cyrillic-600.svg#Montserrat') format('svg'); /* Legacy iOS */
+  src: url('../../fonts/montserrat-v15-latin_cyrillic-regular.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-regular.woff2')
+      format('woff2'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-regular.woff') format('woff'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-regular.ttf')
+      format('truetype'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-regular.svg#Montserrat')
+      format('svg');
 }
 
 /* montserrat-700 - latin_cyrillic */
@@ -28,9 +21,21 @@
   font-weight: bold;
   src: url('../../fonts/montserrat-v15-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../fonts/montserrat-v15-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../fonts/montserrat-v15-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../fonts/montserrat-v15-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
-  url('../../fonts/montserrat-v15-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../fonts/montserrat-v15-latin_cyrillic-700.svg#Montserrat') format('svg'); /* Legacy iOS */
+    url('../../fonts/montserrat-v15-latin_cyrillic-700.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-700.woff2') format('woff2'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-700.woff') format('woff'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-700.ttf') format('truetype'),
+    url('../../fonts/montserrat-v15-latin_cyrillic-700.svg#Montserrat')
+      format('svg');
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  src: url('../../fonts/MaterialIcons-Regular.eot');
+  src: local(''), url('../../fonts/MaterialIcons-Regular.woff') format('woff'),
+    url('../../fonts/MaterialIcons-Regular.ttf') format('truetype'),
+    url('../../fonts/MaterialIcons-Regular.svg') format('svg');
 }
