--- a/src/pug/pages/headers-and-footers/headers-and-footers.scss
+++ b/src/pug/pages/headers-and-footers/headers-and-footers.scss
@@ -1,1 +1,12 @@
 @import '~/assets/scss/main.scss';
+
+.wrapper {
+    background-color: #F4F4F6;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin: 32px 0px;
+}
