--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,11 +1,11 @@
-@import "abstracts/vars";
-@import "abstracts/mixins";
+@import 'abstracts/vars';
+@import 'abstracts/mixins';
 
-@import "base/reset";
-@import "base/fonts";
-@import "base/base";
+@import 'base/reset';
+@import 'base/fonts';
+@import 'base/base';
 
-@import "components/buttons";
+@import 'components/buttons';
 
-@import "layout/header";
-@import "layout/footer";
+@import 'vendors/fontawesome/fontawesome';
+@import 'vendors/fontawesome/brands';
