--- a/src/pug/pages/colors-and-type/colors-and-type.scss
+++ b/src/pug/pages/colors-and-type/colors-and-type.scss
@@ -1,4 +1,5 @@
-@import '~/assets/scss/main.scss';
+@import '@/assets/scss/main';
+@import 'Components/navbar/ui-kit/ui-kit';
 
 .wrapper {
   flex: 1 1 0%;
