--- a/src/assets/scss/abstracts/vars.scss
+++ b/src/assets/scss/abstracts/vars.scss
@@ -7,11 +7,10 @@ $mainFontSize            : 18px;
 $mainFontWeight          : 400;
 $mainLineHeight          : 1.4;
 
-$desktopWidth            : 1280px;
-$smDesktopWidth          : 980px;
-$tableWidth              : 768px;
-$phoneWidth              : 480px;
-$smPhoneWidth            : 320px;
+$xl                      : 1280px;
+$lg                      : 1024px;
+$md                      : 768px;
+$sm                      : 640px;
 
 // Colors
 $dark-100                : rgba(31, 32, 65, 1);
@@ -24,3 +23,5 @@ $primary                 : #BC9CFF;
 $secondary               : #6FCF97;
 
 $gradient                : linear-gradient(180deg, $primary 0%, #8BA4F9 100%);
+
+$fa-font-path            : "../../../fonts";
