--- a/src/assets/scss/components/buttons.scss
+++ b/src/assets/scss/components/buttons.scss
@@ -5,6 +5,20 @@
   padding: 10px 20px;
   font-family: 'Montserrat', Arial, sans-serif;
   border: none;
+  transition: 0.3s;
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
+.button-icon {
+  font-family: 'Material Icons';
+  font-size: 24px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .button-bordered {
@@ -22,6 +36,7 @@
     right: 0;
     z-index: -2;
     background: $gradient;
+    transition: all 0.3s ease-in-out;
     border-radius: inherit;
     position: absolute;
   }
@@ -33,10 +48,15 @@
     right: 2px;
     background-color: white;
     z-index: -1;
-    opacity: 1;
-    transition: all 0.6s ease-in-out;
+    transition: all 0.3s ease-in-out;
     border-radius: inherit;
     position: absolute;
+  }
+  &:hover {
+    opacity: 1;
+    &:before {
+      opacity: 0.5;
+    }
   }
 }
 
