--- a/src/pug/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pug/pages/headers-and-footers/headers-and-footers.pug
@@ -1,4 +1,7 @@
 extends ../../layout/main
+include ../../components/navbar/navbar
+include ../../components/footer/footer
+include ../../components/footer/creative/creative
 
 block variables
     - var title = 'Headers & Footers';
@@ -8,4 +11,6 @@ block content
     .content-wrapper
         +header()
         +header('Юлий Цезарь')
+        +footer()
+        +footer-creative()
 block script
