add humburger menu button

--- a/src/pug/components/footer/footer.scss
+++ b/src/pug/components/footer/footer.scss
@@ -14,6 +14,11 @@
       padding-right: 70px;
     }
 
+    @media (max-width: $lg) {
+      padding-left: 35px;
+      padding-right: 35px;
+    }
+
     &-main {
       @extend .footer-ui__container;
       display: flex;
