--- a/src/pug/components/navbar/navbar.pug
+++ b/src/pug/components/navbar/navbar.pug
@@ -1,10 +1,10 @@
 include ../../components/brand/brand
 
 mixin header(user)
-    header.header-ui
-        .header-ui__wrapper
+    header.header.js-header
+        .header__wrapper
             +brand()
-            .header-ui__items
+            .header__items
                 .body-text
                     b О нас
                 .body-text__header.dropdown Услуги
@@ -12,8 +12,9 @@ mixin header(user)
                 .body-text__header Новости
                 .body-text__header.dropdown Соглашения
                 if(user)
-                    .header-ui__separator
+                    .header__separator
                     .body-text__header= user
                 else
                     button.button-bordered войти
                     button.button-primary зарегистрироваться
+            .header__menu.js-header__menu.icon-gradient.fas.fa-bars
