--- a/src/pug/components/navbar/navbar.scss
+++ b/src/pug/components/navbar/navbar.scss
@@ -1,6 +1,6 @@
 @import '@/assets/scss/abstracts/vars';
 
-.header-ui {
+.header {
   padding: 15px 0;
   width: 100%;
   background-color: white;
@@ -15,6 +15,10 @@
       padding-left: 70px;
       padding-right: 70px;
     }
+    @media (max-width: $lg) {
+      padding-left: 35px;
+      padding-right: 35px;
+    }
   }
 
   &__logo {
@@ -28,11 +32,25 @@
     flex-direction: row;
     gap: 20px;
     align-items: center;
+    @media (max-width: $lg) {
+      display: none;
+    }
   }
 
   &__separator {
     height: 30px;
     width: 1px;
     background-color: $dark-10;
+  }
+
+  &__menu {
+    display: none;
+    width: 30px;
+    cursor: pointer;
+    @media (max-width: $lg) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
