update input mixin

--- a/src/pug/components/footer/footer.pug
+++ b/src/pug/components/footer/footer.pug
@@ -27,7 +27,7 @@ mixin footer()
             .footer-ui__block
                 h3 подписка
                 .body-text Получайте специальные предложения и новости сервиса
-                +input('arrow_forward', 'Email')
+                +input({placeholder:'Email', icon:'arrow_forward'})
         .footer-ui__container-bottom
             .body-text Copyright © 2018 Toxin отель. Все права зачищены.
             .footer-ui__icons-container
