remove h3 selector in footer-ui__block

--- a/src/pug/components/footer/footer.pug
+++ b/src/pug/components/footer/footer.pug
@@ -8,24 +8,24 @@ mixin footer()
                 +brand()
                 .body-text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
             .footer-ui__block
-                h3 навигация
+                h3.title навигация
                 a.body-text__header О нас
                 a.body-text__header Новости
                 a.body-text__header Служба поддержки
                 a.body-text__header Услуги
             .footer-ui__block
-                h3 о нас
+                h3.title о нас
                 a.body-text__header О сервисе
                 a.body-text__header Наша команда
                 a.body-text__header Вакансии
                 a.body-text__header Инвесторы
             .footer-ui__block
-                h3 служба поддержки
+                h3.title служба поддержки
                 a.body-text__header Соглашения
                 a.body-text__header Сообщества
                 a.body-text__header Связь с нами
             .footer-ui__block
-                h3 подписка
+                h3.title подписка
                 .body-text Получайте специальные предложения и новости сервиса
                 +input({placeholder:'Email', icon:'arrow_forward'})
         .footer-ui__container-bottom
