--- a/src/pug/components/footer/footer.pug
+++ b/src/pug/components/footer/footer.pug
@@ -2,35 +2,35 @@ include ../../components/brand/brand
 include ../../components/input/input
 
 mixin footer()
-    footer.footer-ui
-        .footer-ui__container-main
-            .footer-ui__block
+    footer.footer
+        .footer__container-main
+            .footer__block
                 +brand()
                 .body-text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-            .footer-ui__block
+            .footer__block
                 h3.title навигация
                 a.body-text__header О нас
                 a.body-text__header Новости
                 a.body-text__header Служба поддержки
                 a.body-text__header Услуги
-            .footer-ui__block
+            .footer__block
                 h3.title о нас
                 a.body-text__header О сервисе
                 a.body-text__header Наша команда
                 a.body-text__header Вакансии
                 a.body-text__header Инвесторы
-            .footer-ui__block
+            .footer__block
                 h3.title служба поддержки
                 a.body-text__header Соглашения
                 a.body-text__header Сообщества
                 a.body-text__header Связь с нами
-            .footer-ui__block
+            .footer__block
                 h3.title подписка
                 .body-text Получайте специальные предложения и новости сервиса
                 +input({placeholder:'Email', icon:'arrow_forward'})
-        .footer-ui__container-bottom
+        .footer__container-bottom
             .body-text Copyright © 2018 Toxin отель. Все права зачищены.
-            .footer-ui__icons-container
+            .footer__icons-container
                 a.fab.fa-twitter.icon-gradient
                 a.fab.fa-facebook-square.icon-gradient
                 a.fab.fa-instagram.icon-gradient
