--- a/src/pug/components/footer/footer.scss
+++ b/src/pug/components/footer/footer.scss
@@ -1,6 +1,6 @@
 @import '@/assets/scss/abstracts/vars';
 
-.footer-ui {
+.footer {
   width: 100%;
   background-color: white;
   box-shadow: 0px 10px 20px $dark-5;
@@ -20,7 +20,7 @@
     }
 
     &-main {
-      @extend .footer-ui__container;
+      @extend .footer__container;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -41,7 +41,7 @@
     }
 
     &-bottom {
-      @extend .footer-ui__container;
+      @extend .footer__container;
       display: flex;
       justify-content: space-between;
       align-items: center;
