add media breakpoints for 'colors-and-type' page

--- a/src/pug/pages/colors-and-type/colors-and-type.pug
+++ b/src/pug/pages/colors-and-type/colors-and-type.pug
@@ -17,15 +17,15 @@ block content
                 +color-item('Purple', '#BC9CFF')(class="color-item__shape-primary")
                 +color-item('Green', '#6FCF97')(class="color-item__shape-secondary")
             .items-wrapper__headers
-                    h1.header-item__header H1
-                    h1.header-item__text.title This one is the sub-section or widget title
-    
-                    h2.header-item__header H2
-                    h2.header-item__text.title Next one is the item title inside widgets
-    
-                    h3.header-item__header H3
-                    h3.header-item__text.title This is a label or CTA text
-    
-                    .body-text.header-item__header Body
-                    .body-text.header-item__text This is the body text which is used for most of the design, like paragraphs, lists, etc.
+                h1.header-item__header H1
+                h1.title This one is the sub-section or widget title
+
+                h2.header-item__header H2
+                h2.title Next one is the item title inside widgets
+
+                h3.header-item__header H3
+                h3.title This is a label or CTA text
+
+                .body-text.header-item__header Body
+                .body-text This is the body text which is used for most of the design, like paragraphs, lists, etc.
 block script
