--- a/src/pug/pages/colors-and-type/colors-and-type.scss
+++ b/src/pug/pages/colors-and-type/colors-and-type.scss
@@ -1,21 +1,24 @@
 @import '@/assets/scss/main';
 @import 'Components/navbar/ui-kit/ui-kit';
 
-.wrapper {
-  flex: 1 1 0%;
-  height: 100%;
-}
-
 .content-wrapper {
   max-width: 1440px;
   margin: 0 auto;
   padding: 37px 150px;
+  @media (max-width: $lg) {
+    padding: 37px 75px;
+  }
 }
 
 .flex-wrapper {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  @media (max-width: $lg) {
+    flex-direction: column;
+    gap: 45px 0;
+    margin: 0 auto;
+    max-width: 436px;
+  }
 }
 
 .items-wrapper {
@@ -29,7 +32,7 @@
   &__headers {
     @extend .items-wrapper;
     gap: 50px 30px;
-    width: 39%;
+    max-width: 436px;
   }
 }
 
@@ -37,8 +40,6 @@
   &__header {
     color: $dark-25;
     text-align: right;
-  }
-  &__text {
   }
 }
 
@@ -69,11 +70,13 @@
       background-color: $secondary;
     }
   }
+
   &__block {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
+
   &__text {
     font-size: 19px;
     line-height: 28px;
