--- a/src/pug/components/navbar/navbar.pug
+++ b/src/pug/components/navbar/navbar.pug
@@ -15,6 +15,6 @@ mixin header(user)
                     .header__separator
                     .body-text__header= user
                 else
-                    button.button-bordered войти
-                    button.button-primary зарегистрироваться
+                    button.button.button-outline войти
+                    button.button.button-primary зарегистрироваться
             .header__menu.js-header__menu.icon-gradient.fas.fa-bars
