--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -8,7 +8,7 @@ block variables
 block content
     .content-wrapper
         +input({title:'text field', placeholder:'Email'})
-        button.button-primary click me
-        button.button-bordered click me
-        button.button-text click me
+        button.button.button-big.button-primary click me
+        button.button.button-big.button-outline click me
+        button.button.button-big.button-text click me
 block script
