create radio-button component

--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -2,6 +2,7 @@ extends ../../layout/main
 include ../../components/input/input
 include ../../components/checkbox-button/checkbox-button
 include ../../components/toggle-button/toggle-button
+include ../../components/radio-button/radio-button
 
 block variables
     - var title = 'Form elements';
@@ -17,4 +18,6 @@ block content
         +checkbox-button('Можно с питомцами')
         +checkbox-button('Можно пригласить гостей (до 10 человек)')
         +toggle-button('Получать спецпредложения')
+        +radio-button('Мужчина', 'sex')
+        +radio-button('Женщина', 'sex')
 block script
