add masked text field

--- a/src/pug/components/input/input.pug
+++ b/src/pug/components/input/input.pug
@@ -2,6 +2,6 @@ mixin input({placeholder='', icon, title, pattern})
     .text-field-container
         h3.title= title
         label.text-field
-            input.text-field__input.body-text(placeholder= placeholder, pattern= pattern)
+            input.text-field__input.body-text(placeholder= placeholder, pattern= pattern)&attributes(attributes)
             if icon
                 button.text-field__icon.icon-gradient= icon
