--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -11,6 +11,7 @@ block variables
 block content
     .content-wrapper
         +input({title:'text field', placeholder:'Email'})
+        +input({title:'masked text field', placeholder:'ДД.ММ.ГГГГ'})(class="js-date-field")
         button.button.button-big.button-primary click me
         button.button.button-big.button-outline click me
         button.button.button-big.button-text click me
