--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -50,7 +50,7 @@ h3 {
   line-height: 24px;
   color: $dark-75;
   &__header {
-    @extend .body-text;
+    font-size: 14px;
     line-height: 17px;
     color: $dark-50;
   }
