advantages-list: fix font size in title

--- a/src/pug/components/advantages-list/advantages-list.pug
+++ b/src/pug/components/advantages-list/advantages-list.pug
@@ -6,5 +6,5 @@ mixin advantages-list(items)
                     .advantage__container
                         .advantage__icon.icon.icon-gradient= item.icon
                         .advantage__text-container
-                            span.advantage__title.title= item.title
-                            span.advantages__description.body-text= item.description
+                            span.advantage__title.body-text.title= item.title
+                            span.advantage__description.body-text= item.description
