input: fix icon display as text

--- a/src/pug/components/input/input.pug
+++ b/src/pug/components/input/input.pug
@@ -4,4 +4,4 @@ mixin input({placeholder='', icon, title, pattern})
         label.text-field
             input.text-field__input.body-text(placeholder= placeholder, pattern= pattern)&attributes(attributes)
             if icon
-                button.text-field__icon.icon-gradient= icon
+                button.text-field__icon.icon.icon-gradient= icon
